# QR_code_verifier

./: .gitignore  Manual_QR_code_generator.ipynb  README.md  public_keys.json  pyproject.toml  qr_signer_app.py  qr_verify_app.py  rsa_qr_registry_qt.py
keystore/: 0_private.pem  public_key.pem
