[project]
name = "qr-code-verifier"
version = "0.1.0"
description = "Qt RSA QR key registry + sign/verify"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
  # --- QR + GUI ---
  "PySide6>=6.6,<6.8",
  "qrcode[pil]>=7.4,<8",
  "Pillow>=10.2,<12",

  # --- Crypto ---
  "cryptography>=42,<45",

  # --- Webcam QR scanning (OpenCV) ---
  # Critical: keep NumPy <2 until your OpenCV wheel is confirmed NumPy-2 ABI compatible.
  "numpy>=1.26,<2",
  "opencv-python>=4.8,<5",
]

[project.scripts]
qr-code-verifier = "rsa_qr_registry_qt:main"

[tool.uv]
# This makes installs more predictable on macOS (prefer wheels, avoid source builds).
no-build-isolation = true